methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit=true) {return(true)}; else {return(false)}
               ^