methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
 	var vuBiscuit=false
  while (vuBiscuit==false){
  	for (k<-1 to 6){
    	if (estSurBiscuit){
      	vuBiscuit=true
        avance()
    	}}	
  	var n=0
  	for (n<-1 to 6){
    	recule()
    } 
  }
  if (vuBiscuit=true) {return(true)}; else {return(false)}
}